.xmonad/xmonad.errors

xmonad.hs:144:45: error:
    • Couldn't match expected type ‘(a2
                                     -> W.StackSet i0 l0 a2 s0 sd0 -> W.StackSet i0 l0 a2 s0 sd0)
                                    -> X a1’
                  with actual type ‘GHC.Word.Word64’
    • The function ‘w’ is applied to one argument,
      but its type ‘GHC.Word.Word64’ has none
      In the second argument of ‘(>>)’, namely ‘w W.sink’
      In the first argument of ‘(>>)’, namely ‘focus w >> w W.sink’
    |
144 |     , ((modKey, button2), (\w -> focus w >> w W.sink
    |                                             ^^^^^^^^
